--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
 @import url(base.css);
 @import url(layout/header.css);
 @import url(layout/current-weather.css);
+@import url(layout/5-day-forecast.css);
