--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -133,7 +133,7 @@ body {
   background-color: var(--background);
   color: var(--on-background);
   font-size: var(--body-3);
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 :focus-visible {
