hourly-forecast added

--- a/assets/css/layout/hourly-forecast.css
+++ b/assets/css/layout/hourly-forecast.css
@@ -1,86 +1,37 @@
-.highlights .m-icon {
-  font-size: 3.2rem;
+.slider-container {
+  overflow-x: auto;
+  margin-inline: -16px;
 }
 
-.highlight-list {
-  display: grid;
-  gap: 20px;
+.slider-container::-webkit-scrollbar {
+  display: none;
 }
 
-.highlight-list .title-3 {
-  color: var(--on-surface-variant);
-  margin-block-end: 20px;
-}
-
-.highlights .card-sm {
-  background-color: var(--black-alpha-10);
-  position: relative;
-}
-
-.highlight-card :is(.wrapper, .card-list, .card-item) {
+.slider-list {
   display: flex;
-  align-items: center;
+  gap: 12px;
 }
 
-.highlight-card .wrapper {
-  justify-content: space-between;
-  gap: 16px;
+.slider-list:first-child {
+  margin-block-end: 16px;
 }
 
-.highlight-card .card-list {
-  flex-wrap: wrap;
-  flex-grow: 1;
-  row-gap: 8px;
+.slider-list::before,
+.slider-list::after {
+  content: "";
+  min-width: 4px;
 }
 
-.highlight-card .card-item {
-  width: 50%;
-  justify-content: flex-end;
-  gap: 4px;
-}
-.highlight-card .label-1 {
-  color: var(--on-surface-variant);
+.slider-item {
+  min-width: 110px;
+  flex: 1 1 100%;
 }
 
-.badge {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  padding: 2px 12px;
-  border-radius: var(--radius-pill);
-  font-weight: var(--weight-semiBold);
-  cursor: help;
+.slider-card {
+  text-align: center;
 }
 
-.badge.aqi-1 {
-  background-color: var(--bg-aqi-1);
-  color: var(--on-bg-aqi-1);
-}
-.badge.aqi-2 {
-  background-color: var(--bg-aqi-2);
-  color: var(--on-bg-aqi-2);
-}
-
-.badge.aqi-3 {
-  background-color: var(--bg-aqi-3);
-  color: var(--on-bg-aqi-3);
-}
-
-.badge.aqi-4 {
-  background-color: var(--bg-aqi-4);
-  color: var(--on-bg-aqi-4);
-}
-.badge.aqi-5 {
-  background-color: var(--bg-aqi-5);
-  color: var(--on-bg-aqi-5);
-}
-
-.highlight-card.two .card-item {
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  gap: 8px 16px;
-}
-
-.highlight-card.two .label-1 {
-  margin-block-end: 4px;
+.slider-item .weather-icon {
+  margin-inline: auto;
+  margin-block: 12px;
 }
