responsive desing created

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,3 +7,4 @@
 @import url(layout/footer.css);
 @import url(layout/loading.css);
 @import url(layout/error.css);
+@import url(layout/mediaqueries.css);
