--- a/assets/css/layout/current-weather.css
+++ b/assets/css/layout/current-weather.css
@@ -51,6 +51,18 @@
   font-size: var(--label-2);
 }
 
+.fade-in {
+  animation: fade-in 250ms ease forwards;
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 main {
   height: calc(100vh - 80px);
   height: calc(100svh - 80px);
